syntax = "proto3";

package types;

import "scalapb/scalapb.proto";
import "google/protobuf/wrappers.proto";
import "google/protobuf/timestamp.proto";

option java_package = "com.rides.domain.types.protobuf";

option (scalapb.options) = {
  single_file: true
  preserve_unknown_fields: false,
  no_default_values_in_constructor: false
};

//state
message VehicleStatePB {
  int64 vehicleId = 1;
  double lat = 2;
  double lon = 3;
  google.protobuf.Timestamp updatedAt = 4 [(scalapb.field).no_box = true];
  string replyTo = 5;
}

message Location {
  double lat = 1;
  double lon = 2;
}

/*

message ActiveTag {
  option (scalapb.message).extends = "com.rides.StatusTag";
}

message InactiveTag {
  option (scalapb.message).extends = "com.rides.StatusTag";
}
*/
